--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,13 @@
 #black-color{
     color: #000000;
 }
+
+#white-color{
+    color: #ffffff;
+    display:none;
+}
+
+
 body {
     max-width: 1440px;
     padding: 0 20px 0 20px;
@@ -96,6 +103,7 @@ nav ul{
 nav li{
     padding-top:15px;
     font-size:16px;
+    border-top: solid 2px transparent;
 }
 
 nav li:hover{
@@ -156,6 +164,7 @@ header p{
     padding: 15px 16px 15px 16px;
 }
 
+
 .btn-search:hover{
     background-color: #0052C1;
 }
@@ -211,18 +220,19 @@ header p{
 
 .info{
     display: flex;
-    flex-direction: row;
-    justify-content: flex-start ;
-    align-items: flex-start;
+    align-items: center;
     gap: 10px;
 }
 
-.info img{
-    width: 4px;
-    height: 10px;
-    padding: 4px 7px 4px 7px;
+.info i{
+    width: 20px;
+    height: 20px;
     border: solid 1px #d9d9d9;
-    border-radius: 100%;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 12px; 
 }
 
 /****** Hebergements And Populaires ***********/
@@ -258,17 +268,21 @@ header p{
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
+    gap:30px;
+
 }
 
 .hebergements img{
-    width: 278px;
+    width: 100%;
+    min-width: 250px;
     height: 124px;
     border-radius: 20px 20px 0 0;
     padding-left: 1px;
 }
 
 .hebergements-cards .card {
-    width: 280px
+    display: flex;
+    flex-direction: column;
 }
 
 
@@ -387,6 +401,7 @@ footer{
 
 .footer-title{
     padding: 15px;
+    flex-grow: 1;
 }
 
 .footer-title h3{
@@ -423,7 +438,7 @@ footer{
         display: flex;
         flex-direction: row;
         justify-content: flex-start;
-        gap: 15px;
+        gap: 30px;
     }
 
     .populaires {
@@ -471,6 +486,18 @@ footer{
 /* Small devices (phones, less than 768px) */
 @media (max-width: 767.98px) {
     /* ... */
+    body{
+        padding:0;
+    }
+
+    header{
+        margin-bottom: 0px;
+    }
+
+    header, footer{
+        padding: 15px;
+    }
+
     .filtres{
         display: flex;
         flex-direction: column;
@@ -484,4 +511,96 @@ footer{
         width: 100%;
         text-align: center;
     }
+
+    nav{
+        flex-direction: column;
+        text-align: center;
+        align-items: center;
+    }
+
+    nav ul{
+        padding: 0;
+        width: 100%;
+    }
+
+    nav li{
+        width: 50%;
+        border-top: solid 0px;
+        border-bottom: solid 2px #f2f2f2;
+        padding: 15px 0 15px 0;
+    }
+
+    nav li:hover{
+        border-top: solid 0px;
+        border-bottom: solid 2px #0065FC;
+    }
+
+    #transformation{
+        display: none;
+    }
+
+    #white-color{
+        display: block;
+    }
+
+    .hebergements-and-populaires{
+        flex-direction: column-reverse;
+        gap: 0;
+    }
+
+    .hebergements-and-populaires section{
+        border-radius: 0;
+    }
+
+    .hebergements-and-populaires .hebergements{
+        background-color: #ffffff;
+    }
+
+    .hebergements-cards a{
+        margin-top: 0px;
+    }
+
+    .populaires{
+        margin-top:0;
+    }
+
+    .populaires-cards, .hebergements-cards{
+        flex-direction: column;
+    }
+
+    .populaires-cards a{
+        width: 100%;
+    }
+
+    .card{
+        width: 100%;
+    }
+
+    .hebergements{
+        gap: 15px;
+    }
+    .hebergements-cards{
+        width: 100%;
+        gap: 15px;
+    }
+
+    .hebergements-cards img{
+        border: solid 5px transparent;
+        width: 97%;
+        padding-right: 15px;
+        border-radius: 20px 30px 0 0;
+    }
+
+    #id_activities{
+        margin-top: 0;
+    }
+
+    .hebergements-cards h3{
+        margin-top : 8px;
+    }
+
+    footer{
+        flex-direction: column;
+    }
+
 }
