--- a/css/style.css
+++ b/css/style.css
@@ -305,8 +305,8 @@ header p{
     font-size: 16px;
 }
 
-.hebergements-cards a{
-    margin-top: 30px;
+.hebergements .card-txt{
+    margin-top: 5px
 }
 
 .affiche-plus {
@@ -543,6 +543,18 @@ footer{
         display: block;
     }
 
+    
+    .input-search{
+        width: 100%;
+    }
+
+    .btn-search{
+        border-radius: 15px;
+        margin-left: -15px;
+        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+
+    }
+
     .hebergements-and-populaires{
         flex-direction: column-reverse;
         gap: 0;
@@ -572,10 +584,6 @@ footer{
         width: 100%;
     }
 
-    .card{
-        width: 100%;
-    }
-
     .hebergements{
         gap: 15px;
     }
@@ -594,6 +602,26 @@ footer{
 
     .hebergements-cards h3{
         margin-top : 8px;
+    }
+
+    .activites-cards{
+        flex-direction: column;
+        gap: 15px;
+    }
+
+    .activites-cards a{
+        width: 100%;
+        height: 200px;
+    }
+
+    .activites-cards .card{
+        width: 100%;
+        height: 200px;
+    }
+
+    .activites-cards .card img{
+        width: 100%;
+        height: 141px;
     }
 
     footer{
