--- a/css/style.css
+++ b/css/style.css
@@ -426,6 +426,21 @@ footer{
 /****** Media queries ***********/
 /* Medium devices (tablets, less/equal than 1024px) */
 @media (max-width: 1024px) {
+
+    .filtres h2{
+        margin-bottom: 0;
+    }
+
+    .filtres{
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 20px
+    }
+
+    .filtres-btn{
+        font-size: 16px;
+    }
+
     .hebergements-and-populaires {
         flex-direction: column;
     }
@@ -551,7 +566,10 @@ footer{
         border-radius: 15px;
         margin-left: -15px;
         filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    }
 
+    .btn-ico{
+        font-size:14px;
     }
 
     .hebergements-and-populaires{
